ansible_kubernetes_automation/demo-01-nginx-tls-automation/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: my-nginx
  labels:
    app: my-nginx
spec:
  type: ClusterIP
  selector:
    app: my-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
